<resources>
    <string name="app_name">Fitness trainer</string>
    <string name="always_pay">Always be fit</string>
    <string name="login">Login</string>
    <string name="forgot_your">Forgot your password?</string>
    <string name="don_t_have_">Don\'t have an account yet?</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="registration">Registration</string>
    <string name="email">E-mail</string>
    <string name="reset_your_">Reset your password</string>
    <string name="please_ente">Please, enter your e-mail address. We will send you message to reset your password</string>
    <string name="send">Send</string>
    <string name="your_name">Your name*</string>
    <string name="last_name_edit">Last name*</string>
    <string name="data_of_birth">Date of birth*</string>
    <string name="tell_us_abo">Tell us about yourself</string>
    <string name="next">Next</string>
    <string name="your_gender">Your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_height">Your height and weight</string>
    <string name="kg_sm">kg/sm</string>
    <string name="kg">kg</string>
    <string name="sm">sm</string>
    <string name="lbs_ft">lbs/ft</string>
    <string name="lbs">lbs</string>
    <string name="ft">ft</string>
    <string name="height">Height</string>
    <string name="height_reg">Height*</string>
    <string name="weight">Weight</string>
    <string name="weight_reg">Weight*</string>
    <string name="target_weight">Target weight*</string>
    <string name="your_program">Your program is ready!</string>
    <string name="register_in">Register in get access to the Fitness trainer platform</string>
    <string name="create_account">Create an account</string>
    <string name="by_creating">By creating in account, you agree to the terms of use, privacy policy and terms of payment and return</string>
    <string name="privacy_policy">the terms of use, privacy policy</string>
    <string name="terms_of_payment">terms of payment and return</string>
    <string name="part_one">1/4</string>
    <string name="part_two">2/4</string>
    <string name="part_three">3/4</string>
    <string name="part_four">4/4</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="new_notification">New notification</string>
    <string name="choose_the_time">Choose a time first!</string>
    <string name="choose_the_days">Choose the days of the week!</string>
    <string name="time">Time</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="e_mail">E-mail</string>
    <string name="output">Output</string>
    <string name="delete_profile">Delete profile</string>
    <string name="my_profile">My profile</string>
    <string name="workout_schedule">Workout schedule</string>
    <string name="workouts_completed_this_week">Number of workouts this week -</string>
    <string name="daily_trainings">Daily trainings</string>
    <string name="click_to_start">Click to start</string>
    <string name="back_to_home">Back to home</string>
    <string name="alerts">Alerts</string>
    <string name="warning">Warning!</string>
    <string name="war_log_out">Do you really want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="war_delete">Are you sure you want to delete your profile?</string>
    <string name="delete">Delete</string>
    <string name="check_account">Checking the existence of the account</string>
    <string name="pl_wait">Please, wait</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="suc_reset">Reset password e-mail sent to you!</string>
    <string name="create_acc_alert">Creating an account</string>
    <string name="create_suc_alert">"Your account is successfully registered!"</string>
    <string name="login_alert">"Login to your account"</string>
    <string name="home">Home</string>
    <string name="workout">WORKOUTS</string>
    <string name="beginner">Beginner</string>
    <string name="continuing">Continuing</string>
    <string name="advanced">Advanced</string>
    <string name="area_of_focus">Area of focus</string>
    <string name="close">Close</string>
    <string name="count_exercise">Count of exercise</string>
    <string name="text_notification">Don\'t miss today\'s workout!</string>
    <string name="clear_all_notifications">Clear all notifications</string>
    <string name="all_notification_canceled">All notifications canceled!</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="wed">Wed</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="created_notification">Notification created</string>
    <string name="week">week</string>
    <string name="save">Save</string>
    <string name="notification_item">notification</string>
    <string name="start_exc">Start exercise</string>
    <string name="start">Start</string>
    <string name="pause_exc">Pause</string>
    <string name="continue_exc">Continue</string>

    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

</resources>