<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:fitsSystemWindows="true"
    tools:context=".app.presentation.login.LoginFragment">

    <ImageView
        android:id="@+id/textViewOneToFour"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/some_id"
        android:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitleApp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAppearance="@style/text_view_title_app"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewOneToFour"
        app:layout_constraintTop_toTopOf="@+id/textViewOneToFour" />

    <TextView
        android:id="@+id/textViewSubtitleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/always_pay"
        android:textAppearance="@style/text_view_subtitle_app"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textViewTitleApp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleApp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/green"
        android:elevation="5dp"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOneToFour"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_9">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="53dp"
                android:layout_height="23dp"
                android:layout_marginTop="24dp"
                android:text="@string/login"
                android:textAppearance="@style/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailLogin"
                style="@style/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailLogin"
                    style="@style/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordLogin"
                style="@style/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilEmailLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordLogin"
                    style="@style/input_edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/forgot_your"
                android:textAppearance="@style/forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPasswordLogin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnterLogin"
                style="@style/OutlinedButton.Green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/enter"
                app:layout_constraintEnd_toEndOf="@+id/tilPasswordLogin"
                app:layout_constraintStart_toStartOf="@+id/tilPasswordLogin"
                app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />

            <TextView
                android:id="@+id/textViewDontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/don_t_have_"
                android:textAppearance="@style/don_t_have_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonEnterLogin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonRegistrationLogin"
                style="@style/OutlinedButton.Green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/registration"
                app:layout_constraintEnd_toEndOf="@+id/buttonEnterLogin"
                app:layout_constraintStart_toStartOf="@+id/buttonEnterLogin"
                app:layout_constraintTop_toBottomOf="@+id/textViewDontHaveAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>