<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".app.presentation.registration.four.RegistrationFourFragment">


    <ImageView
        android:id="@+id/imageButtonArrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewReg4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="113dp"
        app:strokeWidth="0dp"
        app:cardCornerRadius="0dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_9">

            <TextView
                android:id="@+id/textViewFourToFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/part_four"
                android:textAppearance="@style/some_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressBarFour"
                android:layout_width="325dp"
                android:layout_height="4dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="17dp"
                android:progress="100"
                app:indicatorColor="@color/green_b"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFourToFour"
                app:trackColor="@color/green"
                app:trackCornerRadius="10dp" />

            <TextView
                android:id="@+id/textViewIsReady"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/your_program"
                android:textAppearance="@style/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBarFour" />

            <TextView
                android:id="@+id/register_in"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal|top"
                android:minLines="2"
                android:text="@string/register_in"
                android:textAppearance="@style/register_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewIsReady" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmailRegistration"
                style="@style/text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="25dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorTextColor="@android:color/holo_red_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_in">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailRegistration"
                    style="@style/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordRegistration"
                style="@style/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilEmailRegistration"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordRegistration"
                    style="@style/input_edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewByCreate"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal|top"
                android:text="@string/by_creating"
                android:textAppearance="@style/by_creating"
                app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCreateAccount"
                style="@style/OutlinedButton.Green"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginBottom="49dp"
                android:text="@string/create_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tilPasswordRegistration"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/tilPasswordRegistration" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>