<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".app.presentation.settings.SettingsActivity">

    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="8dp"
        android:text="@string/back_to_home"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSettings" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="51dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/green"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@drawable/avatar_male" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/ubuntu_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        tools:text="Pavel Surodeykin" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="96dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textMyProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="58dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/my_profile"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tlName"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMyProfile" />

        <TextView
            android:id="@+id/textNameUser"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMyProfile"
            tools:text="Pavel" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerColor="@color/white_D"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:dividerThickness="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlName" />

        <TextView
            android:id="@+id/tlLastName"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divName" />

        <TextView
            android:id="@+id/textLastNameUser"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divName"
            tools:text="Surodeykin" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerColor="@color/white_D"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:dividerThickness="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlLastName" />

        <TextView
            android:id="@+id/tlDate"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/date_of_birth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divLastName" />

        <TextView
            android:id="@+id/textDate"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divLastName"
            tools:text="03/31/1982" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerColor="@color/white_D"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:dividerThickness="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlDate" />

        <TextView
            android:id="@+id/tlWeight"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divDate" />

        <TextView
            android:id="@+id/textWeight"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divDate"
            tools:text="Russia" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerColor="@color/white_D"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:dividerThickness="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlWeight" />

        <TextView
            android:id="@+id/tlHeight"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divCountry" />

        <TextView
            android:id="@+id/textHeight"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divCountry"
            tools:text="Stavropol" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerColor="@color/white_D"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:dividerThickness="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlHeight" />

        <TextView
            android:id="@+id/tlEmail"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/e_mail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divCity" />

        <TextView
            android:id="@+id/textEmail"
            style="@style/settings_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divCity"
            tools:text="Pavel12345@gmail.com" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerColor="@color/white_D"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:dividerThickness="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tlEmail" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonOutput"
            style="@style/OutlinedButton.Green"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/output"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/textViewDeleteProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewDeleteProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:gravity="center"
            android:text="@string/delete_profile"
            android:textAppearance="@style/forgot_password"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonOutput"
            app:layout_constraintStart_toStartOf="@+id/buttonOutput" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>